# smartAIjournalistBot

./: .gitignore  deploy.bat  new article source.txt  render.yaml  requirements.txt  run_local_server.bat
my_framework/: .gitignore  Style Guru System - Complete Doc.txt  bash  intellinews_style_framework.json  intellinews_style_guide.txt  pyproject.toml  render-build.sh  render.yaml  requirements.txt  setup_style_guru.py
my_framework/app/: server.py
my_framework/app/templates/: index.html  style-guru.html  styleguru.html  test.html  websocket_test.html
my_framework/data/: X.npy  model_weights.npz  y.npy
my_framework/src/my_framework/agents/: editor.py  iterative_writer.py  loggerbot.py  orchestrator.py  publisher.py  researcher.py  summarizer.py  tools.py  utils.py  writer.py
my_framework/src/my_framework/apps/: rules.py  schemas.py
my_framework/src/my_framework/core/: runnables.py  schemas.py
my_framework/src/my_framework/models/: base.py  openai.py
my_framework/src/my_framework/parsers/: base.py  standard.py
my_framework/src/my_framework/prompts/: base.py  templates.py
my_framework/src/my_framework/style_guru/: __init__.py  analyzer.py  deep_analyzer.py  features.py  model.py  scorer.py  training.py
my_framework/src/my_framework/tools/: cms_poster.py  executor.py  google_sheets.py  llm_calls.py  web_scraper.py
